<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.SearchFilterFragment">

    <FrameLayout
        android:id="@+id/header_back_button_and_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/header_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:padding="20dp"
            android:src="@drawable/back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/filter_page_header"
            android:textAlignment="center"
            android:textSize="@dimen/header_title_size"
            android:textStyle="bold" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_constraint_watch_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_watch_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:padding="10dp"
            android:text="@string/filter_select_watch_type_title"
            app:layout_constraintBottom_toTopOf="@+id/select_watch_type_group"
            app:layout_constraintStart_toStartOf="@+id/select_watch_type_group"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/select_watch_type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:checkedButton="@id/select_all"
            app:singleSelection="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_watch_type_title">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_all"
                style="@style/CustomMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_all"
                android:textSize="14sp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_films"
                style="@style/CustomMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_films"
                android:textSize="14sp"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_TVseries"
                style="@style/CustomMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_TVseries"
                android:textSize="14sp"
                app:strokeWidth="1dp" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/choose_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="20dp"
            android:text="@string/filter_choose_country_title"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_country_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="20dp"
            android:alpha="0.5"
            android:text="@string/filter_choose_country_choice"
            android:textSize="16sp" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/choose_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_genre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="20dp"
            android:text="@string/filter_choose_genre_title"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_genre_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="20dp"
            android:alpha="0.5"
            android:text="@string/filter_choose_genre_choice"
            android:textSize="16sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/choose_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="20dp"
            android:text="@string/filter_choose_year_title"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_year_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="20dp"
            android:alpha="0.5"
            android:text="@string/filter_choose_year_choice"
            android:textSize="16sp" />

    </FrameLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rating_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rating_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/filter_page_rating_select_title"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/rating_select_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rating_select_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            style="@style/CustomRangeSlider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating_select_title"
            app:values="@array/initial_slider_values" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_constraint_film_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/select_film_sort_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:padding="10dp"
            android:text="@string/filter_select_film_sort_title"
            app:layout_constraintBottom_toTopOf="@+id/select_film_sort_group"
            app:layout_constraintStart_toStartOf="@+id/select_film_sort_group"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/select_film_sort_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:singleSelection="true"
            app:checkedButton="@id/select_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_film_sort_title">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_date"
                android:textSize="14sp"
                style="@style/CustomMaterialButton"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_popularity"
                android:textSize="14sp"
                style="@style/CustomMaterialButton"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_select_rating"
                style="@style/CustomMaterialButton"
                android:textSize="14sp"
                app:strokeWidth="1dp" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>