<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.GalleryFragment">

    <FrameLayout
        android:id="@+id/header_back_button_and_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/header_back_button"
            android:layout_width="@dimen/back_button_size"
            android:layout_height="@dimen/back_button_size"
            android:layout_gravity="start|center"
            android:layout_marginStart="26dp"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:padding="20dp"
            android:src="@drawable/back_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:text="@string/gallery"
            android:textAlignment="center"
            android:textSize="@dimen/header_title_size"
            android:textStyle="bold" />

    </FrameLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/gallery_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleLine="true"
        app:singleSelection="true"
        android:paddingStart="@dimen/main_dimen"
        app:chipSpacingHorizontal="20dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_still_images"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            style="@style/CustomChipChoice"
            app:chipStrokeWidth="1dp"
            android:checked="true"
            android:text="@string/chip_still_images"
            android:textSize="@dimen/chip_text_size"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_shooting_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipStrokeWidth="1dp"
            style="@style/CustomChipChoice"
            android:text="@string/chip_shooting_images"
            android:textSize="@dimen/chip_text_size"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_poster_images"
            android:layout_width="wrap_content"
            app:chipStrokeWidth="1dp"
            android:layout_height="wrap_content"
            style="@style/CustomChipChoice"
            android:text="@string/chip_poster_images"
            android:textSize="@dimen/chip_text_size"/>

    </com.google.android.material.chip.ChipGroup>


    <FrameLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/full_list_of_photos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ProgressBar
                android:id="@+id/search_page_progress"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_page_retry_button"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:text="@string/retry"
                android:layout_height="wrap_content"/>
        </LinearLayout>



    </FrameLayout>



</LinearLayout>